--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
             </intent-filter>
         </activity>
         <receiver android:name=".handlers.SleepAlarmReceiver" android:exported="false"/>
-
+        <receiver android:name=".handlers.ActivityReminderReceiver" android:exported="false"/>
     </application>
 
 </manifest>
